==> scotthollwedel/ble_public/SmartNode/spi.c <==
#include <string.h>
#include "spi.h"
#include "gpio.h"
#include "boards.h"
#include "spi_master_config.h"
#include "nrf_delay.h"
#include "WifiDriver/evnt_handler.h"
#include "serial.h"
#define READ                    3
#define WRITE                   1
#define HI(value)               (((value) & 0xFF00) >> 8)
#define LO(value)               ((value) & 0x00FF)
#define ASSERT_CS()          nrf_gpio_pin_clear(SPI_PSELSS0);
#define DEASSERT_CS()        nrf_gpio_pin_set(SPI_PSELSS0);
#define HEADERS_SIZE_EVNT       (SPI_HEADER_SIZE + 5)
#define SPI_HEADER_SIZE			(5)
#define 	eSPI_STATE_POWERUP 				 (0)
#define 	eSPI_STATE_INITIALIZED  		 (1)
#define 	eSPI_STATE_IDLE					 (2)
#define 	eSPI_STATE_WRITE_IRQ	   		 (3)
#define 	eSPI_STATE_WRITE_FIRST_PORTION   (4)
#define 	eSPI_STATE_WRITE_EOT			 (5)
#define 	eSPI_STATE_READ_IRQ				 (6)
#define 	eSPI_STATE_READ_FIRST_PORTION	 (7)
#define 	eSPI_STATE_READ_EOT				 (8)
#define CC3000_BUFFER_MAGIC_NUMBER (0xDE)

int init_spi(void)
{
    /* Configure GPIO pins used for pselsck, pselmosi, pselmiso and pselss for SPI0 */
    nrf_gpio_cfg_output(SPI_PSELSCK0);
    nrf_gpio_cfg_output(SPI_PSELMOSI0);
    nrf_gpio_cfg_input(SPI_PSELMISO0, NRF_GPIO_PIN_NOPULL);
    nrf_gpio_cfg_output(SPI_PSELSS0);

    /* Configure pins, frequency and mode */
    NRF_SPI0->PSELSCK  = SPI_PSELSCK0;
    NRF_SPI0->PSELMOSI = SPI_PSELMOSI0;
    NRF_SPI0->PSELMISO = SPI_PSELMISO0;
    nrf_gpio_pin_set(SPI_PSELSS0); /* disable Set slave select (inactive high) */
    NRF_SPI0->FREQUENCY = (uint32_t) SPI_OPERATING_FREQUENCY;

    const uint32_t config_mode = (SPI_CONFIG_CPHA_Trailing << SPI_CONFIG_CPHA_Pos) | (SPI_CONFIG_CPOL_ActiveHigh << SPI_CONFIG_CPOL_Pos);
    NRF_SPI0->CONFIG = (config_mode | (SPI_CONFIG_ORDER_MsbFirst << SPI_CONFIG_ORDER_Pos));
    NRF_SPI0->EVENTS_READY = 0U;

    /* Enable */
    NRF_SPI0->ENABLE = (SPI_ENABLE_ENABLE_Enabled << SPI_ENABLE_ENABLE_Pos);
	return(ESUCCESS);
}

long
SpiFirstWrite(unsigned char *ucBuf, unsigned short usLength)
{
	// workaround for first transaction
	ASSERT_CS();
	
	// Assuming we are running on 24 MHz ~50 micro delay is 1200 cycles;
    nrf_delay_us(50);
	
	// SPI writes first 4 bytes of data
	SpiWriteDataSynchronous(ucBuf, 4);
	
    nrf_delay_us(50);
	
	SpiWriteDataSynchronous(ucBuf + 4, usLength - 4);
	
	// From this point on - operate in a regular way
	sSpiInformation.ulSpiState = eSPI_STATE_IDLE;
	
	DEASSERT_CS();
	
	return(0);
}

void
SpiWriteDataSynchronous(unsigned char *data, unsigned short size)
{
	while (size)
	{   	
        NRF_SPI0->TXD = *data;
        while (NRF_SPI0->EVENTS_READY == 0U);
        NRF_SPI0->EVENTS_READY = 0U;
        NRF_SPI0->RXD;
        size --;
        data++;
	}
}

void
SpiReadDataSynchronous(unsigned char *data, unsigned short size)
{
    unsigned char *data_to_send = tSpiReadHeader;
    //char buffer[1024];
    //memset(buffer, 0, sizeof(buffer));
	while (size)
	{   	
        NRF_SPI0->TXD = data_to_send[0];
        while ((NRF_SPI0->EVENTS_READY == 0U));
        NRF_SPI0->EVENTS_READY = 0U;
        *data = NRF_SPI0->RXD;
        //sprintf(buffer, "%s%02x ", buffer, *data);
        size--;
        data++;
	}
    //debug_print(buffer);
}
